fix mobile sidebar z-index

--- a/_static/hasura-custom.css
+++ b/_static/hasura-custom.css
@@ -1367,7 +1367,7 @@ ol, ul {
   #sidebar {
     top: 170px;
     height: calc(100% - 170px);
-    z-index: 1;
+    z-index: 10;
   }
 
   .header_links {
